--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
     padding: 0;
 }
 h1{
-    font-size: 5vmax;
+    font-size: 4vmax;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 body{
     display: flex;
@@ -18,7 +19,6 @@ body{
     align-items: center;
     /* width: 30vmax;
     height: 30vmax; */
-    background-color: antiquewhite;
 }
 .game{
     display: flex;
@@ -104,7 +104,7 @@ body{
     .game{
         display: grid;
         width:fit-content;
-        min-height: 60vmax;
+        min-height: fit-content;
         grid-template-columns: 100px 100px 100px;
         grid-template-rows: 100px 100px 100px;
         background-color: #2196F3;
